--- a/style.css
+++ b/style.css
@@ -1,5 +1,38 @@
-h1 {
-    color: skyblue;
-    font-size: 20px;
+body {
+    background-image: linear-gradient(skyblue, pink);
+}
+
+header {
+    /* background-color: palevioletred; */
+    text-align: center;
+    font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    margin: 50px auto;
+}
+
+.game-btn {
+    background-color: skyblue;
+    width: 60px;
+    min-height: 50px;
+    margin: 50px;
+}
+
+.gen-container {
+    display: flex;
+    padding-bottom: 30px;
+}
+
+
+.btn-container {
+    /* background-color: teal; */
+    width: 15%;
+    padding-left: 70px;
+    padding-top: 0;
+}
+
+.gameboard {
+    background-color: beige;
+    width: 70%;
+    min-height: 50px;
 }
