--- a/style.css
+++ b/style.css
@@ -19,15 +19,16 @@ header {
 .modal {
     background-color: rgba(245, 245, 220, 0.655);
     position:absolute;
-    top: 50%;
-    left: 450px;
+    top: 20%;
+    left: 20%;
     height: 200px;
     width: 350px;
     border-radius: 2.5px;
     font-size: 35px;
     text-align: center;
     padding-top: 35px;
-    z-index: 10;
+    /* z-index: 10; */
+    
     display: none;
 }
 .modal p {
@@ -43,6 +44,15 @@ header {
 
 .btn-modal {
     height: 35px;
+}
+
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    display: none;
+
 }
 
 .game-btn {
@@ -90,7 +100,6 @@ header {
 }
 
 .gameboard {
-    /* background-color: beige; */
     width: 70%;
     min-height: 50px;
 }
@@ -102,7 +111,6 @@ header {
 .scorecard-container {
     min-height: 500px;
     width: 50%;
-    /* background-color: sienna; */
     text-align: center;
     font-size: 40px;
 }
@@ -124,7 +132,6 @@ header {
 
 .tic-tac-box {
     font-family: Arial, Helvetica, sans-serif;
-    /* background-color: azure; */
     height: 150px;
     width: 30%;
     text-align: center;
@@ -146,26 +153,51 @@ header {
 #rock-paper-scissors-container {
     min-height: 100%;
     max-height: 100%;
-    background-color: azure;
+    /* background-color: azure; */
     display: none;
+    
+    
 }
 
 .rock-paper-scissors-box {
+    display: block;    
+    justify-content: center;
     min-height: 100%;
     width: 50%;
     padding: 50px;
-    background-color: rgba(0, 122, 128, 0.5);
+    /* background-color: rgba(0, 122, 128, 0.5); */
     text-align: center;
     font-size: 40px;
 }
 
 .rock-paper-scissors-box img {
     height: 55px;
+    flex-grow: 7;
+}
+
+.rps-move {
+    padding: 90px 0;
+    height: 100px;
+}
+
+.rps-move img {
+    height: 100px;
 }
 
 .options-box {
-    height: 30px;
-    display: flex;
+    
     justify-content: space-between;
-    padding: 100px;
+    padding: 7px;
+
+}
+
+.options-box button {
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    cursor: pointer;
+}
+
+.rps-option img {
+    height: 45px;
+
 }
